# native-input

./: .env.example  .envrc  .gitignore  AGENTS.md  LICENSE  build_config.py  check_db.py  main.py  pyproject.toml  pytest.ini  reInput.spec  requirements.txt  settings.toml.example  version_info.txt
.github/workflows/: build.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook  docs-sync-hook.kiro.hook  security-scan-hook.kiro.hook
.qoder/plans/: HTTP_POST_Input_Server_4bdd0338.md
.trae/documents/: agno-agent-session-er-diagram.md  agno-integration-analysis.md  database_usage_guide.md
app/: __init__.py  autostart.py  config.py  credentials.py  icon.py  service.py  tray.py
client/: requirements.txt
client/config/: settings.py
client/services/: text_injection.py  websocket_client.py  window_context.py
client/tests/: test_settings.py  test_single_instance.py  test_text_injection.py  test_websocket_client.py  test_window_context.py
client/utils/: platform.py  single_instance.py
config/: prompts.yaml
docs/: agent_config_usage_verification.md  agent_initialization_analysis.md  clipboard_paste_fix.md  config_simplification_summary.md  prompt_source_verification.md  window_context_implementation.md  window_context_quickstart.md  window_context_usage.md  简化认证需求文档.md
docs/plans/: 2026-02-08-agent-service-design.md  2026-02-08-agent-service-implementation.md  2026-02-08-desktop-packaging-design.md  2026-02-08-desktop-packaging-implementation.md  2026-02-08-tray-api-key-popup-implementation.md  2026-02-09-frontend-client-implementation.md  2026-02-09-frontend-client-requirements.md
docs/specs/ai-input-method/: requirements_en.md  requirements_implementation_status_zh.md
installer/: ai-input-method-installer.nsi
resources/config/: llm_config_examples.json  update_channels.json
routers/: cancel.py  process.py  websocket.py
scripts/: README.md  analyze_code_metrics.py  build_and_test.py  build_executable.py  build_installer.py  check_config_consistency.py  deploy_release.py  diagnose_voice.py  format_code.py  hotkey_simulator.py  refactoring_progress.py  release_manager.py  run_tests.py  run_voice_tests.py  security_check.py
services/: agent_service.py  connection_manager.py  constants.py  prompt_loader.py  request_registry.py
src/: __init__.py  main.py
src/config/: __init__.py  config.py  config_validator.py  hotkey_config.py  settings.py
src/core/: __init__.py  app_initializer.py  app_lifecycle.py  container.py
src/core/business/: __init__.py  configuration.py  text_processing.py
src/core/exceptions/: __init__.py  ai_exceptions.py
src/core/interfaces/: __init__.py  ai_interfaces.py  business_interfaces.py  configuration_interfaces.py  database_interfaces.py  system_interfaces.py
src/core/models/: __init__.py  ai_models.py
src/platform_integration/: single_instance.py  system_integration.py
src/services/ai/: ai_service.py  models.py
src/services/audio/: __init__.py  audio_service.py
src/services/auth/: auth_callback_handler.py  credential_manager.py  simple_auth_manager.py
src/services/database/: __init__.py  database_manager.py  database_service.py  migration.py  models.py
src/ui/: __init__.py  system_tray.py
src/ui/components/: __init__.py  (+2 more)
src/utils/: http.py  loguru_config.py  windows_utils.py
tests/: conftest.py  test_agent_service.py  test_autostart.py  test_cancel_router.py  test_connection_manager.py  test_credentials.py  test_integration.py  test_main.py  test_process_router.py  test_prompt_loader.py  test_prompt_loader_paths.py  test_request_registry.py  test_service.py  test_tray_api_key.py  test_uvicorn_logging_no_stdio.py  test_websocket_router.py
(+41 files in other folders)
